# hwinfo

./: CMakeLists.txt  LICENSE  README.md  hwinfo.cpp
